# ebm-report-pipeline

./: .cursorrules  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  ebm-report.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: appraisal-tools.md  departments.md  ebm-slide-template.md  progress-schema.md  study-type-hierarchy.md
data/references/: casp-case-control-template.csv  casp-cohort-template.csv  casp-diagnostic-template.csv  casp-rct-template.csv  casp-sr-template.csv  pico-template.yaml
data/templates/: style-a-formal.md  style-b-clean.md  style-c-teaching.md  style-d-competition.md
projects/example-sglt2i-ckd/: README.md  TOPIC.txt
projects/example-sglt2i-ckd/01_ask/: classification.md  clinical_scenario.md  introduction.md  pico.yaml
projects/example-sglt2i-ckd/02_acquire/: candidates.csv  prisma_flow.md  search_strategy.md  selected_articles.md
projects/example-sglt2i-ckd/03_appraise/: appraisal.csv  coi_check.md  results_summary.md  tool_selection.md
scripts/: build_search_query.py  build_slide_outline.py  dedupe_results.py  export_appraisal.py  generate_platform_config.py  generate_pptx.py  generate_prisma_flow.py  init_project.py  quality_gate.py  screenshot.py  status.py  utils.py  validate_step.py
skills/: appraise.md  brainstorm.md  classify.md  ebm-slides.md  ebm.md  lit-search.md  load-progress.md  pico.md  save-progress.md
tests/: test_build_search_query.py  test_dedupe.py  test_platform_config.py  test_prisma_flow.py  test_utils.py
(+7 files in other folders)
